modified swagger doc
