# swagger.yml
@@ -82,8 +82,6 @@ paths:
               workout_intensity: mild
               equipment: threadmill
               workout_type: Cardio
-        400:
-          description: Invalid input data
         404:
           description: Workout not found
       security:
@@ -110,7 +108,7 @@ paths:
           schema:
             $ref: '#/definitions/Workout'
       responses:
-        200:
+        204:
           description: Workout updated successfully
           schema:
             type: object
@@ -144,6 +142,8 @@ paths:
           description: No input data provided or invalid input data
         403:
           description: Unauthorized access
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
         404:
           description: Workout not found
       security:
@@ -192,7 +192,7 @@ paths:
                 type: string
                 example: "Workout deleted successfully"
         403:
-          description: Unauthorized access
+          description: This workout belongs to a workout plan or Unauthorized access
         404:
           description: Workout not found
       security:
@@ -286,8 +286,8 @@ paths:
                   workout_intensity: fast
                   equipment: Yoga Mat
                   workout_type: Flexibility
-        400:
-          description: Invalid input data
+        500:
+          description: Internal Server Error
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -341,6 +341,10 @@ paths:
           description: Invalid input data
         403:
           description: Unauthorized access
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
+        500:
+          description: Internal Server Error.
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -408,6 +412,10 @@ paths:
           description: Invalid input data
         403:
           description: Unauthorized access
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
+        500:
+          description: Internal Server Error
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -429,8 +437,6 @@ paths:
           description: A workout plan object
           schema:
             $ref: '#/definitions/WorkoutPlan'
-        400:
-          description: Invalid input data
         404:
           description: Workout plan not found
       security:
@@ -474,7 +480,7 @@ paths:
                 description: ID of the playlist.
                 example: 4
       responses:
-        200:
+        204:
           description: Workout plan updated successfully
           schema:
             type: object
@@ -510,6 +516,8 @@ paths:
           description: Unauthorized access
         404:
           description: Workout plan not found
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -527,7 +535,7 @@ paths:
             type: integer
           description: Unique identifier of the workout plan to be deleted
       responses:
-        200:
+        204:
           description: Workout plan deleted successfully
           schema:
             type: object
@@ -559,6 +567,91 @@ paths:
                 example: "Workout plan deleted successfully"
         404:
           description: Workout plan not found
+      security:
+        - BearerAuth: []
+        - X-API-Key: []
+  /api/{user_id}/workoutPlan:
+    get:
+      tags:
+        - Workout Plan By User
+      summary: Get workout plan by user ID
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: Unique identifier of the user
+      responses:
+        200:
+          description: List of workout plans for the user
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/WorkoutPlan'
+          examples: 
+            application/json:
+              "@namespaces": 
+                custWorkoutPlaylistGen:
+                  name: "/workout_plan_link_relation"
+              "@controls": 
+                item:
+                  method: "GET"
+                  title: "Get all Workouts"
+                  href: "/api/workout"
+              workout_plans_list:
+                - "@controls":
+                    item:
+                      method: "GET"
+                      title: "Get Workout plan by workout_plan_id"
+                      href: "/api/workoutPlan/12"
+                    delete:
+                      method: "DELETE"
+                      title: "Delete This Workout Plan"
+                      href: "/api/workoutPlan/12"
+                  workout_plan_id: 12
+                  plan_name: "Morning Routine"
+                  user_id: 48
+                  playlist_id: 4
+                  duration: 15.0
+                  workouts_list:
+                    - workout_id: 44
+                      workout_name: "w1"
+                      duration: 6.33
+                      workout_intensity: "slow"
+                      equipment: "treadmill"
+                      workout_type: "test"
+                    - "@controls":
+                        item:
+                          method: "GET"
+                          title: "Get Workout plan by workout_plan_id"
+                          href: "/api/workoutPlan/32"
+                        delete:
+                          method: "DELETE"
+                          title: "Delete This Workout Plan"
+                          href: "/api/workoutPlan/32"
+                      workout_plan_id: 32
+                      plan_name: "new plan"
+                      user_id: 48
+                      playlist_id: 53
+                      duration: 7.83
+                      workouts_list:
+                        - workout_id: 47
+                          workout_name: "w1"
+                          duration: 6.33
+                          workout_intensity: "fast"
+                          equipment: "treadmill"
+                          workout_type: "test"
+                        - workout_id: 48
+                          workout_name: "jogging"
+                          duration: 1.5
+                          workout_intensity: "mild"
+                          equipment: "no"
+                          workout_type: "Cardio"
+        404:
+          description: Workout Plan for the user is not found
+        400:
+          description: Invalid input data
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -625,8 +718,6 @@ paths:
               song_artist: lilMozart
               song_genre: Pop
               song_duration: 4.52
-        400:
-          description: Invalid input data
         404:
           description: Song not found
       security:
@@ -653,7 +744,7 @@ paths:
           schema:
             $ref: '#/definitions/Song'
       responses:
-        200:
+        204:
           description: Song updated successfully
           schema:
             type: object
@@ -689,6 +780,8 @@ paths:
           description: Unauthorized access
         404:
           description: Song not found
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -704,7 +797,7 @@ paths:
             type: integer
           description: Unique identifier of the song to be deleted
       responses:
-        200:
+        204:
           description: Song deleted successfully
           schema:
             type: object
@@ -839,8 +932,8 @@ paths:
                   song_artist: lilMozart
                   song_genre: Indie
                   song_duration: 4.52
-        400:
-          description: Invalid input data
+        500:
+          description: Internal Server Error
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -894,6 +987,12 @@ paths:
           description: Invalid input data
         403:
           description: Unauthorized access
+        409:
+          description: Song already exists
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
+        500:
+          description: Internal Server Error
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -991,7 +1090,7 @@ paths:
                 description: Name of the playlist.
                 example: "Summer night plan Playlist"
       responses:
-        200:
+        204:
           description: Playlist updated successfully
           schema:
             type: object
@@ -1027,6 +1126,8 @@ paths:
           description: Unauthorized access
         404:
           description: Playlist not found
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -1043,7 +1144,7 @@ paths:
             type: integer
           description: Unique identifier of the playlist to be deleted
       responses:
-        200:
+        204:
           description: Playlist deleted successfully
           schema:
             type: object
@@ -1075,6 +1176,8 @@ paths:
                 example: "Playlist deleted successfully"
         404:
           description: Playlist not found
+        403:
+          description: This playlist belongs to a workout plan
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -1128,6 +1231,10 @@ paths:
           description: Invalid input data
         403:
           description: Unauthorized access
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
+        500:
+          description: Internal Server Error
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -1179,6 +1286,8 @@ paths:
                 example: "User registered successfully"
         400:
           description: Invalid input data for user registration or email already exists
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
         500:
           description: Failed to register user or generate API key
       security:
@@ -1252,6 +1361,10 @@ paths:
           description: Invalid password
         404:
           description: No such user in the system
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
+        500:
+          description: Internal Server Error
       security:
         - BearerAuth: []
         - X-API-Key: []
@@ -1335,7 +1448,7 @@ paths:
           type: integer
           description: Unique identifier of the user to be deleted
       responses:
-        200:
+        204:
           description: User deleted successfully
           schema:
             type: object
@@ -1392,7 +1505,7 @@ paths:
           schema:
             $ref: '#/definitions/User'
       responses:
-        200:
+        204:
           description: User updated successfully
           schema:
             type: object
@@ -1428,6 +1541,8 @@ paths:
           description: Unauthorized access
         404:
           description: User not found
+        415:
+          description: Unsupported Media Type, This service accept JSON input.
       security:
         - BearerAuth: []
         - X-API-Key: []
